--- a/src/components/filter/plusMinus.scss
+++ b/src/components/filter/plusMinus.scss
@@ -1,11 +1,20 @@
 .plus-minus {
   position: relative;
+  width: 20px;
+  margin-top: -3px;
+  aspect-ratio: 1/1;
+  // border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   div {
-    position: absolute;
     transition: all ease-in 100ms;
+    position: fixed;
   }
+
   .move {
     transform: rotate(90deg);
-    margin-top: -2px;
+    margin-top: -5px;
+    margin-left: -1px;
   }
 }
