--- a/src/components/filter/plusMinus.scss
+++ b/src/components/filter/plusMinus.scss
@@ -1,20 +1,26 @@
 .plus-minus {
   position: relative;
   width: 20px;
-  margin-top: -3px;
+  margin-top: 5px;
+
   aspect-ratio: 1/1;
   // border: 1px solid black;
   display: flex;
   align-items: center;
   justify-content: center;
   div {
-    transition: all ease-in 100ms;
-    position: fixed;
+    transition: all ease-in 200ms;
+    // border: 1px black solid;
   }
-
+  // div:nth-child(1) {
+  //   margin-right: -50%;
+  // }
+  div:nth-child(2) {
+    margin-left: -100%;
+  }
   .move {
     transform: rotate(90deg);
-    margin-top: -5px;
-    margin-left: -1px;
+    margin-top: -13px;
+    margin-left: -120% !important;
   }
 }
