--- a/src/components/filter/Filter.scss
+++ b/src/components/filter/Filter.scss
@@ -32,10 +32,27 @@ $light-grey: #e6e6e6;
         font-weight: 350;
         font-size: 18px;
       }
+      .fold {
+        margin: -10px;
+        height: 0;
+        opacity: 0;
+        pointer-events: none;
+      }
+      .more {
+        animation-fill-mode: backwards;
+        animation-duration: 500ms;
+        animation-name: more;
+      }
+      .less {
+        animation-fill-mode: forwards;
+        animation-duration: 500ms;
+        animation-name: less;
+      }
       &_row {
         // transition: all ease-in-out;
         animation-name: show;
-        animation-duration: 1s;
+        animation-duration: 1000ms;
+        animation-fill-mode: backwards;
         margin-top: 10px;
         display: flex;
         div {
@@ -94,5 +111,30 @@ $light-grey: #e6e6e6;
 
   100% {
     opacity: 100%;
+  }
+}
+@keyframes more {
+  0% {
+    height: 0;
+    opacity: 0;
+  }
+  99% {
+    opacity: 1;
+  }
+  100% {
+    height: auto;
+  }
+}
+@keyframes less {
+  0% {
+    height: auto;
+  }
+  1% {
+    opacity: 0;
+  }
+  100% {
+    margin: -10px;
+    height: 0;
+    opacity: 0;
   }
 }
