--- a/src/components/filter/Filter.scss
+++ b/src/components/filter/Filter.scss
@@ -6,13 +6,14 @@ $light-grey: #e6e6e6;
   margin: 0;
   padding: 0;
   font-family: calibre;
+  // transition: all ease-in-out 200ms;
 }
 .filters {
   .filter {
     padding: 15px 10px;
     border-top: 1px solid $light-grey;
     border-bottom: 0.3px solid $light-grey;
-    width: 300px;
+    width: 250px;
     &_expand {
       display: flex;
       align-items: center;
@@ -83,6 +84,9 @@ $light-grey: #e6e6e6;
       }
     }
     &_more {
+      transition: all ease-out 200ms;
+      margin-top: 10px;
+      background-color: white;
       transition: all ease-in-out 1000ms;
       .more_or_less {
         display: flex;
@@ -118,10 +122,10 @@ $light-grey: #e6e6e6;
     height: 0;
     opacity: 0;
   }
-  99% {
+  100% {
     opacity: 1;
   }
-  100% {
+  50% {
     height: auto;
   }
 }
@@ -129,12 +133,13 @@ $light-grey: #e6e6e6;
   0% {
     height: auto;
   }
-  1% {
+  50% {
     opacity: 0;
   }
   100% {
     margin: -10px;
     height: 0;
     opacity: 0;
+    pointer-events: none;
   }
 }
