--- a/src/components/footer/firstLine/boxes.scss
+++ b/src/components/footer/firstLine/boxes.scss
@@ -1,45 +1,17 @@
 .box {
 
-
-  &_title {
-    font-size: 14px;
-    color: #000000;
-    text-decoration: none;
-    font-weight: 600;
-    line-height: 25px;
-    position: relative;
-    width: fit-content;
-
-    &::before {
-      content: "";
-      position: absolute;
-      bottom: -5px;
-      left: 0;
-      width: 0;
-      height: 2px;
-      background-color: red;
-      transition: width 0.3s ease-in-out;
-    }
-
-    &:hover::before {
-      width: 100%;
-    }
-
-  }
-
-  &_detail {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 15px 0;
+  &_header {
 
 
-    &_text {
-      margin-bottom: 20px;
+    &_title {
       font-size: 14px;
+      color: #000000;
       text-decoration: none;
-      color: #57585B;
+      font-weight: 600;
+      line-height: 25px;
       position: relative;
+      width: fit-content;
+
 
       &::before {
         content: "";
@@ -55,18 +27,99 @@
       &:hover::before {
         width: 100%;
       }
+
     }
   }
+
+  &_detail {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px 0;
+  }
+}
+
+.box_header_title:hover {
+  color: #57585B;
+}
+
+.text {
+  font-size: 14px;
+  text-decoration: none;
+  color: #57585B;
+  position: relative;
+  width: fit-content;
+
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: 5px;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: red;
+    transition: width 0.3s ease-in-out;
+  }
+
+  &:hover::before {
+    width: 100%;
+  }
+}
+
+.dropdown {
+  width: 100%;
+  background-color: white;
+}
+
+.dropdown-header {
+  padding: 15px 0;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 600;
+}
+
+.dropdown-body {
+  display: none;
+
+}
+
+.dropdown-body.open {
+  display: block;
+}
+
+.dropdown-item {
+  padding: 10px 0;
+
+  :hover {
+    cursor: pointer;
+  }
+}
+
+.iconFirst {
+  font-size: 13px;
+  color: #91A5BE;
+  transform: rotate(-90deg);
+  transition: all ease-in-out 0.1s;
+}
+
+.iconFirst.open {
+  transform: rotate(90deg);
 }
 
 
 @media screen and (max-width: 990px) {
-  .box_title {
-    flex-direction: column;
-    flex-wrap: wrap;
-    flex: 0 0 100%;
-    max-width: 100%;
-    padding: 15px 0 ;
+  .box {
+    display: none;
   }
 }
+
+@media screen and (min-width: 990px) {
+  .dropdown {
+    display: none;
+  }
+}
+
+
 
