--- a/src/components/sort/SortDesktop.scss
+++ b/src/components/sort/SortDesktop.scss
@@ -64,3 +64,11 @@ $light-grey: #e6e6e6;
     display: none;
   }
 }
+@media (min-width: 992px) {
+  .lable_tablet {
+    display: none;
+  }
+  .sort_tablet {
+    display: none;
+  }
+}
