--- a/src/app.scss
+++ b/src/app.scss
@@ -5,4 +5,5 @@ body {
   font-family: Calibre,Helvetica Neue,Helvetica,Roboto,Arial,sans-serif;
   font-size: 14px;
   font-weight: 400;
+  background-color: lightgray;
 }
