--- a/src/components/navigation component/MainNav/inputInfor.scss
+++ b/src/components/navigation component/MainNav/inputInfor.scss
@@ -1,46 +1,73 @@
-.search_form {
-  display: flex;
-  align-items: center;
-  position: relative;
-  justify-content: space-between;
+.searchBar {
+  z-index: 2;
+
+  .search_form {
+    display: flex;
+    align-items: center;
+    position: relative;
+    justify-content: space-between;
 
 
-  .search_search {
-    position: absolute;
-    left: 10px;
-    width: 20px;
-    z-index: 2;
+    .search_search {
+      position: absolute;
+      left: 10px;
+      width: 20px;
+      z-index: 2;
 
 
-    :hover {
-      cursor: pointer;
+      :hover {
+        cursor: pointer;
+      }
     }
-  }
 
-  .search_input {
-    width: 250px;
-    height: 30px;
-    border: none;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-    padding: 10px 10px 10px 40px;
-    font-size: 16px;
-    border-radius: 5px;
-    background-color: rgba(255, 255, 255, 0.6);
-    opacity: 0.6;
-    transition: all ease-in-out 0.3s;
-    color: black;
-    outline: 1px solid black;
+    .search_input {
+      width: 250px;
+      height: 30px;
+      border: none;
+      box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+      padding: 10px 10px 10px 40px;
+      font-size: 16px;
+      border-radius: 5px;
+      background-color: rgba(255, 255, 255, 0.6);
+      opacity: 0.6;
+      transition: all ease-in-out 0.3s;
+      color: black;
+      outline: 1px solid black;
+      z-index: 2;
 
-  }
+    }
 
 
-  .search_closeIcon {
-    position: absolute;
-    right: 5px;
-    z-index: 2;
+    .search_closeIcon {
+      position: absolute;
+      right: 5px;
+      z-index: 2;
 
-    :hover {
-      cursor: pointer;
+      :hover {
+        cursor: pointer;
+      }
     }
   }
 }
+
+@media screen and (max-width: 990px) {
+  .search_form {
+    display: block;
+    width: 100%;
+    .search_search{
+      position: absolute;
+    }
+    .search_input{
+      width: 90%;
+    }
+    .search_closeIcon{
+      position: absolute;
+    }
+  }
+}
+
+
+
+
+
+
