--- a/src/components/navigation component/TopNav/topIcon.scss
+++ b/src/components/navigation component/TopNav/topIcon.scss
@@ -2,3 +2,30 @@
   color: black;
   margin-right: 10px;
 }
+
+
+.checkoutNew {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &_bag {
+    color: black;
+    width: 20px;
+    height: 20px;
+  }
+
+  &_bagInside {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    color: #d31334;
+    font-size: 14px;
+    bottom: -3px;
+
+  }
+}
