--- a/src/components/navigation component/topNavigation.scss
+++ b/src/components/navigation component/topNavigation.scss
@@ -1,7 +1,14 @@
 .main {
   width: 100%;
+  margin: 0 auto;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 18px 0;
+}
+
+@media screen and (max-width: 990px) {
+  .main {
+    flex-direction: column;
+  }
 }
