--- a/src/components/footer/firstLine/boxes.scss
+++ b/src/components/footer/firstLine/boxes.scss
@@ -72,7 +72,7 @@
 }
 
 .dropdown-header {
-  padding: 15px 0;
+  padding: 15px ;
   cursor: pointer;
   display: flex;
   justify-content: space-between;
@@ -90,7 +90,7 @@
 }
 
 .dropdown-item {
-  padding: 10px 0;
+  padding: 10px 15px;
 
   :hover {
     cursor: pointer;
@@ -112,6 +112,8 @@
 @media screen and (max-width: 990px) {
   .box {
     display: none;
+
+
   }
 }
 
