--- a/src/components/navigation component/MainNav/inputInfor.scss
+++ b/src/components/navigation component/MainNav/inputInfor.scss
@@ -21,7 +21,7 @@
     }
 
     .search_input {
-      width: 250px;
+      //width: 250px;
       height: 30px;
       border: none;
       box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
@@ -50,21 +50,15 @@
   }
 }
 
+
 @media screen and (max-width: 990px) {
-  .search_form {
-    display: block;
+
+  .search_input {
     width: 100%;
-    .search_search{
-      position: absolute;
-    }
-    .search_input{
-      width: 90%;
-    }
-    .search_closeIcon{
-      position: absolute;
-    }
+    margin: 0 auto;
   }
 }
+
 
 
 
