debug nested links

--- a/src/components/filter/Filter.scss
+++ b/src/components/filter/Filter.scss
@@ -11,6 +11,7 @@ $radio-red: #d31334;
 }
 .filters {
   font-family: calibre;
+  background-color: white;
   h1 {
     padding: 35px 0 35px 10px;
     font-size: 30px;
