--- a/src/app.scss
+++ b/src/app.scss
@@ -2,8 +2,8 @@ body {
   margin: 0 auto;
   padding: 0;
   max-width: 1200px;
-  font-family: Calibre,Helvetica Neue,Helvetica,Roboto,Arial,sans-serif;
+  font-family: Calibre, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
-  background-color: lightgray;
+  background-color: #fafafa;
 }
