--- a/src/components/filter/FilterLable.scss
+++ b/src/components/filter/FilterLable.scss
@@ -1,21 +1,23 @@
 $light-grey: rgb(230, 230, 230);
 .lable {
   display: flex;
-  p {
-    font-family: calibre;
-    font-size: 13px;
-    font-weight: 500;
-    margin-right: 5px;
-  }
-  svg {
-    width: 8px;
-    margin-top: -3px;
-  }
+
   .filter_lable {
+    background-color: white;
     border-radius: 5px;
     display: flex;
     align-items: center;
     border: 1px solid $light-grey;
+    p {
+      font-family: calibre;
+      font-size: 13px;
+      font-weight: 500;
+      margin-right: 5px;
+    }
+    svg {
+      width: 8px;
+      margin-top: -3px;
+    }
   }
   .filter_lable:hover {
     cursor: pointer;
@@ -26,7 +28,7 @@ $light-grey: rgb(230, 230, 230);
   .lable {
     flex-wrap: wrap;
     .filter_lable {
-      padding: 2px 10px 0;
+      padding: 8px 10px 4px;
       margin-right: 12px;
       margin-bottom: 12px;
     }
@@ -36,7 +38,7 @@ $light-grey: rgb(230, 230, 230);
   .lable {
     overflow-x: scroll;
     .filter_lable {
-      padding: 5px 15px;
+      padding: 14px 15px 12px;
       margin-right: 10px;
     }
     .filter_lable:hover {
