--- a/src/components/filter/TabletFilter.scss
+++ b/src/components/filter/TabletFilter.scss
@@ -20,6 +20,7 @@
     z-index: 99;
     position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(83, 83, 83, 0.194);
