--- a/src/components/filter/plusMinus.scss
+++ b/src/components/filter/plusMinus.scss
@@ -1,26 +1,38 @@
-.plus-minus {
-  position: relative;
-  width: 20px;
-  margin-top: 5px;
+.filters .filter {
+  .plus-minus {
+    position: relative;
+    width: 20px;
+    margin-top: 5px;
 
-  aspect-ratio: 1/1;
-  // border: 1px solid black;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  div {
-    transition: all ease-in 200ms;
-    // border: 1px black solid;
+    aspect-ratio: 1/1;
+    // border: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    div {
+      transition: all ease-in 200ms;
+      // border: 1px black solid;
+    }
+    // div:nth-child(1) {
+    //   margin-right: -50%;
+    // }
+    div:nth-child(2) {
+      margin-left: -100%;
+    }
+    .move {
+      transform: rotate(90deg);
+      margin-top: -12px;
+      margin-left: -22px !important;
+    }
   }
-  // div:nth-child(1) {
-  //   margin-right: -50%;
-  // }
-  div:nth-child(2) {
-    margin-left: -100%;
+}
+.filters .filter .filter_more {
+  div {
+    margin-top: 6px;
   }
   .move {
     transform: rotate(90deg);
-    margin-top: -13px;
-    margin-left: -120% !important;
+    margin-top: -12px;
+    margin-left: -26px !important;
   }
 }
