--- a/src/components/sort/SortDesktop.scss
+++ b/src/components/sort/SortDesktop.scss
@@ -1,21 +1,28 @@
 $light-grey: #e6e6e6;
 .sort-desktop {
   font-family: calibre;
-  margin-left: 200px;
-  width: 200px;
+  width: 100%;
+  // width: 150px;
   //   border: 1px solid black;
   box-sizing: border-box;
-  p {
+  p,
+  span {
     font-weight: 350;
     font-size: 18px;
     margin-right: 5px;
   }
   &-head {
     display: grid;
-    grid-template-columns: 60px 1fr;
+    grid-template-columns: 100px 1fr;
 
+    justify-content: space-between;
+    div {
+      display: flex;
+      justify-content: right;
+    }
     &-title {
       font-weight: 600 !important;
+
       //   border: 1px solid black;
     }
     span {
@@ -24,7 +31,8 @@ $light-grey: #e6e6e6;
       svg {
         right: 0;
         width: 20px;
-        margin-top: -8px;
+        margin-top: -1px;
+        margin-left: 20px;
       }
     }
     span:hover {
@@ -35,14 +43,16 @@ $light-grey: #e6e6e6;
     &-option {
       box-sizing: border-box;
       //   border: 1px solid black;
+
       width: 300px;
       text-align: center;
-      margin-left: -100px;
+      right: 0;
       z-index: 100;
-      background-color: white;
-      position: relative;
+      //
+      position: absolute;
       p {
-        padding: 15px;
+        background-color: white;
+        padding: 20px;
       }
       p:hover {
         cursor: pointer;
@@ -53,8 +63,9 @@ $light-grey: #e6e6e6;
       z-index: 99;
       position: fixed;
       top: 0;
-      width: 100%;
-      height: 100%;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
       //   background-color: rgba(120, 60, 60, 0.194);
     }
   }
