--- a/src/WhatsNew.scss
+++ b/src/WhatsNew.scss
@@ -1,13 +1,31 @@
+$light-grey: #e0e0e0;
+
 .whats_new {
+  nav {
+    background-color: white;
+  }
   main {
     width: 100%;
-    display: flex;
-    .main_right {
-      width: 100%;
-    }
+    display: grid;
+    grid-template-columns: 300px minmax(880px, 1fr);
+    grid-gap: 20px;
     .main_right_top {
       display: flex;
       justify-content: space-between;
+      padding-top: 30px;
+      padding-bottom: 20px;
+      margin-bottom: 20px;
     }
+  }
+}
+
+@media (max-width: 992px) {
+  .whats_new .main_right_top {
+    display: none;
+  }
+}
+@media (min-width: 992px) {
+  .main_right_top {
+    border-bottom: 0.5px solid $light-grey;
   }
 }
