--- a/src/app.scss
+++ b/src/app.scss
@@ -1,9 +1,11 @@
 body {
-  margin: 0 auto;
-  padding: 0;
-  max-width: 1200px;
   font-family: Calibre, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   background-color: #fafafa;
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 10px;
+  }
 }
