--- a/src/components/filter/FilterLable.scss
+++ b/src/components/filter/FilterLable.scss
@@ -13,9 +13,11 @@ $light-grey: rgb(230, 230, 230);
       font-size: 13px;
       font-weight: 500;
       margin-right: 5px;
+      white-space: nowrap;
     }
     svg {
-      width: 8px;
+      width: 10px;
+      min-width: 10px;
       margin-top: -3px;
     }
   }
@@ -38,7 +40,7 @@ $light-grey: rgb(230, 230, 230);
   .lable {
     overflow-x: scroll;
     .filter_lable {
-      padding: 14px 15px 12px;
+      padding: 15px 15px 13px;
       margin-right: 10px;
     }
     .filter_lable:hover {
