--- a/src/components/filter/TabletFilter.scss
+++ b/src/components/filter/TabletFilter.scss
@@ -30,6 +30,8 @@
     z-index: 100;
     position: absolute;
     top: 0;
+    left: -10px;
+    border-left: 10px solid white;
     width: 320px;
     animation-name: slidein;
     animation-duration: 500ms;
