--- a/src/components/filter/Filter.scss
+++ b/src/components/filter/Filter.scss
@@ -13,7 +13,7 @@ $radio-red: #d31334;
   font-family: calibre;
   background-color: white;
   h1 {
-    padding: 35px 0 35px 10px;
+    padding: 35px 20px;
     font-size: 30px;
     display: flex;
     justify-content: space-between;
@@ -37,11 +37,11 @@ $radio-red: #d31334;
   }
 }
 .filters {
-  width: 300px;
+  // width: 300px;
 
   .filter {
     background-color: white;
-    padding: 15px 10px;
+    padding: 15px 20px;
     // border-top: 1px solid $light-grey;
     border-top: 0.3px solid $light-grey;
 
