--- a/src/components/filter/FilterLable.scss
+++ b/src/components/filter/FilterLable.scss
@@ -42,6 +42,7 @@ $light-grey: rgb(230, 230, 230);
     .filter_lable {
       padding: 15px 15px 13px;
       margin-right: 10px;
+      margin-bottom: 15px;
     }
     .filter_lable:hover {
       border-color: black;
