--- a/src/components/productPreview/OneProduct.scss
+++ b/src/components/productPreview/OneProduct.scss
@@ -5,6 +5,7 @@ $color-checkbox: rgb(222, 217, 217);
     pointer-events: none;
     opacity: 0.3;
   }
+
   .color-checkbox {
     div {
       margin: 0 auto;
@@ -45,8 +46,11 @@ $color-checkbox: rgb(222, 217, 217);
     margin-top: 10px;
   }
   .swatches-desktop {
+    .color-checkbox {
+      transform: scale(0.7);
+    }
     display: grid;
-    grid-template-columns: 1fr 10fr 1fr;
+    grid-template-columns: 1fr 7fr 1fr;
 
     &-arrow:hover {
       cursor: pointer;
@@ -82,23 +86,72 @@ $color-checkbox: rgb(222, 217, 217);
         transform: scale(1.2);
       }
     }
-
+    .color-checkbox {
+      transform: scale(0.9);
+    }
     .color-checkboxes {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
     }
   }
+  .swatches-mobile {
+    .color-checkboxes {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      .color-checkbox,
+      .more {
+        transform: scale(0.7);
+      }
+      .more {
+        margin: 0 auto;
+        box-sizing: border-box;
+        width: 26px;
+        height: 26px;
+        border-radius: 30px;
+        border: 2px solid $color-checkbox;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 25px;
+        padding-top: 6px;
+      }
+      .more:hover {
+        cursor: pointer;
+      }
+    }
+  }
 }
-@media (max-width: 600px) {
+
+@media (max-width: 400px) {
+  .product {
+    .swatches-tablet {
+      display: none;
+    }
+  }
+}
+
+@media (min-width: 400px) {
+  .product {
+    .swatches-mobile {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 992px) {
   .product {
     .swatches-desktop {
       display: none;
     }
   }
 }
-@media (min-width: 600px) {
+@media (min-width: 992px) {
   .product {
     .swatches-tablet {
+      display: none;
+    }
+    .swatches-mobile {
       display: none;
     }
     .description {
