--- a/src/components/feedback.scss
+++ b/src/components/feedback.scss
@@ -75,8 +75,9 @@ body {
   padding: 0;
 }
 
-.numbers:hover {
+.numbersBtn:hover {
   cursor: pointer;
+  background-color: #595959;
 }
 
 //.numbers button {
