--- a/src/components/navigation component/TopNav/AllDes.scss
+++ b/src/components/navigation component/TopNav/AllDes.scss
@@ -6,6 +6,7 @@
   padding: 0 10px;
 
   &_details {
+    cursor: pointer;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -26,7 +27,7 @@
     &::before {
       content: "";
       position: absolute;
-      bottom: 10px;
+      bottom: 5px;
       left: 0;
       width: 0;
       height: 2px;
@@ -59,6 +60,7 @@
   &_fiveLoge {
     display: flex;
     justify-content: space-between;
+    cursor: pointer;
 
     &_each {
       margin: 5px;
