--- a/src/components/feedback.scss
+++ b/src/components/feedback.scss
@@ -120,7 +120,7 @@
     position: relative;
     display: block;
     margin: 0 0 0 31px !important;
-    cursor: inherit;
+    cursor: pointer;
   };
 
   a {
