--- a/src/components/navigation component/MainNav/fiveListDes.scss
+++ b/src/components/navigation component/MainNav/fiveListDes.scss
@@ -2,32 +2,54 @@
   display: flex;
   flex-direction: row;
 
-  &_mainBtn {
 
-    font-size: 16px;
-    padding: 5px 20px;
-    color: #000000;
-    text-decoration: none;
-    font-weight: 600;
-    text-align: center;
+  &_dropDown {
+    //overflow: hidden;
     position: relative;
 
+    &_mainBtn {
 
-    &::before {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 20px;
-      width: 0;
-      height: 2px;
-      background-color: red;
-      transition: width 0.3s ease-in-out;
+      font-size: 16px;
+      padding: 5px 20px;
+      color: #000000;
+      text-decoration: none;
+      font-weight: 600;
+      text-align: center;
+      position: relative;
+
+      &::before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 20px;
+        width: 0;
+        height: 2px;
+        background-color: red;
+        transition: width 0.3s ease-in-out;
+      }
+
+
+      &:hover::before {
+        width: 30%;
+      }
     }
 
-    &:hover::before {
-      width: 30%;
+    &:hover {
+      &_page {
+        display: block;
+      }
+    }
+
+    &_page {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+      min-width: 1100px;
+
     }
   }
+
 
   @media screen and (max-width: 990px) {
     .fiveLogo_mainBtn {
@@ -36,30 +58,38 @@
   }
 }
 
-//.text {
-//  font-size: 14px;
-//  padding: 10px 20px;
-//  color: #57585B;
-//  text-decoration: none;
-//  font-weight: 400;
-//  text-align: center;
-//  position: relative;
-//
-//
-//  &::before {
-//    content: "";
-//    position: absolute;
-//    bottom: 0;
-//    left: 0;
-//    width: 100%;
-//    height: 2px;
-//    background-color: red;
-//    transition: width 0.3s ease-in-out;
-//  }
-//
-//  &:hover::before {
-//    width: 100%;
-//  }
-//}
+
+.fiveLogo_dropDown:hover .fiveLogo_dropDown_page {
+  display: block;
+  background-color: #fff;
+}
+
+
+.text {
+  font-size: 14px;
+  padding: 10px 20px;
+  color: #57585B;
+  text-decoration: none;
+  font-weight: 400;
+  text-align: center;
+  position: relative;
+
+
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: red;
+    transition: width 0.3s ease-in-out;
+  }
+
+  &:hover::before {
+    width: 100%;
+  }
+}
+
 
 
