--- a/src/components/navigation component/DropDown/DropDown.css
+++ b/src/components/navigation component/DropDown/DropDown.css
@@ -72,7 +72,7 @@
 .dropdownFile_under {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 .dropdownFile_under_activity {
@@ -106,12 +106,12 @@
 .textHover::before {
   content: "";
   position: absolute;
-  bottom: 0;
-  left: 10px;
-  width: fit-content;
+  bottom: 10px;
+  left: 5px;
+  width: 0;
   height: 2px;
   background-color: red;
-  transition: all ease-in-out 0.3s;
+  transition: width ease-in-out 0.3s;
 }
 .textHover:hover::before {
   width: 100%;
