--- a/src/components/navigation component/DropDown/DropDown.scss
+++ b/src/components/navigation component/DropDown/DropDown.scss
@@ -105,7 +105,7 @@
   &_under {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 
     &_activity {
@@ -147,12 +147,12 @@
   &::before {
     content: "";
     position: absolute;
-    bottom: 0;
-    left: 10px;
-    width: fit-content;
+    bottom: 10px;
+    left: 5px;
+    width: 0;
     height: 2px;
     background-color: red;
-    transition: all ease-in-out 0.3s;
+    transition: width ease-in-out 0.3s;
   }
 
   &:hover::before {
