--- a/src/components/navigation component/MainNav/fiveListDes.scss
+++ b/src/components/navigation component/MainNav/fiveListDes.scss
@@ -4,33 +4,38 @@
 
 
   &_dropDown {
-    //overflow: hidden;
     position: relative;
 
-    &_mainBtn {
+    &_menuList {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
 
-      font-size: 16px;
-      padding: 5px 20px;
-      color: #000000;
-      text-decoration: none;
-      font-weight: 600;
-      text-align: center;
-      position: relative;
+      &_mainBtn {
 
-      &::before {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 20px;
-        width: 0;
-        height: 2px;
-        background-color: red;
-        transition: width 0.3s ease-in-out;
-      }
+        font-size: 16px;
+        padding: 5px 20px;
+        color: #000000;
+        text-decoration: none;
+        font-weight: 600;
+        text-align: center;
+        position: relative;
+
+        &::before {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: 20px;
+          width: 0;
+          height: 2px;
+          background-color: red;
+          transition: width 0.3s ease-in-out;
+        }
 
 
-      &:hover::before {
-        width: 30%;
+        &:hover::before {
+          width: 30%;
+        }
       }
     }
 
@@ -45,7 +50,7 @@
       position: absolute;
       background-color: #f9f9f9;
       box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-      min-width: 1100px;
+      min-width: 990px;
 
     }
   }
